--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,13 @@
 name = "python-template"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.11"
 dependencies = [
     "pygame>=2.6.1",
+    "opencv-python>=4.9.0",
+    "numpy>=1.26.0",
 ]
+
+[tool.setuptools]
+packages = ["game", "WorldData"]
